--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html><head>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css" rel="stylesheet">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>General Use Sender</title>
     <style>
     textarea{
-    resize: none; 
+    resize: none;
 }
     .btn-full-width {
     width: 100%;
@@ -24,22 +21,22 @@
         <div class="card center blue" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 30px;">
-            <h1>Discord Webhook Sender</h1>
+            <h1>Webhook Sender</h1>
 
         </div>
         <div class="card card-panel">
             <div class="input-field">
-                <input id="url" type="text"> <label for="url" class="">Webhook URL</label>
+                <input id="url" type="text">Webhook URL<label for="url" placeholder=""></label>
             </div>
             <div class="input-field">
-                <textarea id="content" style="height: 150px" placeholder="Message"></textarea> 
+                <textarea id="content" style="height: 150px" placeholder="Message"></textarea>
             </div>
             <div class="row">
                 <div class="input-field s6 col">
-                    <input id="username" type="text"> <label for="username" class="">Username</label>
+                    <input id="username" type="text">Username<label for="username" class=""></label>
                 </div>
                 <div class="input-field s6 col">
-                    <input id="avatar_url" type="text"> <label for="avatar_url" class="">Avatar Url</label>
+                    <input id="avatar_url" type="text">Avatar Url<label for="avatar_url" class=""></label>
                 </div>
             </div>
 
@@ -73,9 +70,9 @@
 		0px 1px 0px rgba(255,255,255,0.3);">Send Webhook</button><div></div></div>
     </main>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript">
-    </script> 
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js">
-    </script> 
+    </script>
     <script>
     $(function() {
         $('#Submit').click(function(e) {
